# Reversi-Game

Version 1.0/: Makefile  input1.txt  jugador.cpp  jugador.h  main.cpp  matriz.cpp  matriz.h  pruebaletra.cpp  reversi  tablero.cpp  tablero.h  version1.cpp
Version 2.0/: 10x10con3fichas.otelo  CMakeCache.txt  CMakeLists.txt  Dudas  Makefile  cmake_install.cmake  jugador.cpp  jugador.h  matriz.cpp  matriz.h  reversi.cpp  tablero.cpp  tablero.h
